--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
         <div class="card-body overflow-auto">
             <div class="linha card-text float-start ml-0">
                 <div class="col-1" style="margin-right: 0.5rem;">
-                    <img class="image" src="Bot.svg" alt="" style="transform: scale(2.4);">
+                    <img class="image" src="bot.svg" alt="" style="transform: scale(2.4);">
                 </div>
                 <div class="col-11 bot_msn" style="background-color: cadetblue;">
                     With supporting text below as a natural lead-in to additional
